--- a/src/components/SideDrawer/Drawer.css
+++ b/src/components/SideDrawer/Drawer.css
@@ -22,4 +22,12 @@
   position : fixed;
   top: 80%;
   right: 0%;
+  transition: ease-in 0.25s;
+}
+
+.navigator-open{
+  position: fixed;
+  top:80%;
+  right:75%;
+  transition: ease-out 0.4s;
 }
