--- a/src/components/SideDrawer/SideDrawer.css
+++ b/src/components/SideDrawer/SideDrawer.css
@@ -17,12 +17,12 @@
 }
 
 .side-drawer.open{
-    transform: translateX(0);
+    transform: translateX(0%);
     transition: transform 0.4s ease-out;
 }
 
 .side-drawer ul{
   list-style: none;
   display: flex;
-  felx-direction: column;
+  flex-direction: column;
 }
