--- a/src/components/SideDrawer/SideDrawer.css
+++ b/src/components/SideDrawer/SideDrawer.css
@@ -1,6 +1,6 @@
 .side-drawer{
   height: 100%;
-  background: white;
+  background:white;
   box-shadow: 1px 0px 7px rgba(0,0,0,0.5);
   position: fixed;
   top : 0;
@@ -8,21 +8,24 @@
   width: 75%;
   z-index: 200;
   transform: translateX(100%);
-  transition: transform 0.25s ease-in;
-}
-
-.side-drawer a:hover,
-.side-drawer a:active{
-  color: #fa923f;
+  transition: ease-in 0.25s;
 }
 
 .side-drawer.open{
-    transform: translateX(0%);
-    transition: transform 0.4s ease-out;
+  transform: translateX(0);
+  transition: ease-out 0.4s;
 }
 
 .side-drawer ul{
   list-style: none;
   display: flex;
   flex-direction: column;
+}
+
+
+@media (min-width: 768px){
+  .side-drawer{
+    width : 50%;
+    transform: translateX(0);
+  }
 }
