--- a/src/components/SideDrawer/SideDrawer.css
+++ b/src/components/SideDrawer/SideDrawer.css
@@ -29,3 +29,50 @@
     transform: translateX(0);
   }
 }
+
+
+
+.dropbtn {
+  background: #eee;
+  color: black;
+  padding: 16px;
+  width: 100%;
+  font-size: calc(10px + 4vmin);
+  height: 10vh;
+  border: none;
+  cursor: pointer;
+}
+
+
+
+.dropdown-content {
+  display: none;
+  position: relative;
+  background-color: #f1f1f1;
+  z-index: 1;
+}
+
+.dropdown-content.show{
+  display: flex;
+  width: 100%;
+}
+
+.dropdown-content a {
+  color: black;
+  text-decoration: none;
+}
+
+.show {display: block;}
+
+.el{
+  color: black;
+  width: 100%;
+  font-size: 15px;
+ 
+  display: block;
+  text-align: center;
+}
+
+.el.hide {
+  display: none;
+}
