--- a/src/components/FooterNavigation/FooterNavigation.css
+++ b/src/components/FooterNavigation/FooterNavigation.css
@@ -35,6 +35,23 @@
 }
 
 
+.aktueller-tag {
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: calc(10px + 4vmin);
+  text-decoration: none;
+  color: inherit;
+  float: left;
+  border: 3px solid blue;
+  box-sizing: border-box;
+  margin: auto;
+  width: 100%;
+  height: 100%;
+}
+
+
 @media (min-width: 768px){
   .App-footer{
    width: 50%;
