--- a/src/components/FooterNavigation/FooterNavigation.css
+++ b/src/components/FooterNavigation/FooterNavigation.css
@@ -14,7 +14,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: calc(10px + 4vmin);
+  font-size: calc(10px + 5vmin);
+  font-weight: bold;
   text-decoration: none;
   color: inherit;
   float: left;
@@ -30,11 +31,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: calc(10px + 4vmin);
+  font-size: calc(10px + 5vmin);
+  font-weight: bold;
   text-decoration: none;
   color: inherit;
   float: left;
   border-bottom: 8px solid blue;
+  padding-top: 8px;
   box-sizing: border-box;
   margin: auto;
   width: 100%;
