--- a/src/components/WeekHeader/WeekHeader.css
+++ b/src/components/WeekHeader/WeekHeader.css
@@ -37,7 +37,7 @@
   text-decoration: none;
   color: inherit;
   float: left;
-  border-bottom: 8px solid blue;
+  border-bottom: 8px solid rgb(40, 105, 255);
   padding-top: 5px;
   box-sizing: border-box;
   margin: auto;
