--- a/src/components/FooterNavigation/FooterNavigation.css
+++ b/src/components/FooterNavigation/FooterNavigation.css
@@ -36,7 +36,7 @@
   text-decoration: none;
   color: inherit;
   float: left;
-  border-bottom: 8px solid blue;
+  border-bottom: 8px solid rgb(40, 105, 255);
   padding-top: 8px;
   box-sizing: border-box;
   margin: auto;
