--- a/src/components/SideDrawer/SideDrawer.css
+++ b/src/components/SideDrawer/SideDrawer.css
@@ -38,12 +38,12 @@ select {
   border: none;
 
   width: 100%;
-  height: 40px;
+  height: 7vh;
   padding-left: 10px;
-  background-color: rgb(218, 218, 218);
-  color: rgb(0, 0, 0);
+  background-color: rgb(40, 105, 255);;
+  color: rgb(255, 255, 255);
   font-family: "Open Sans", sans-serif;
-  font-size: 16px;
+  font-size: calc(10px + 2.5vmin);
 
   /*   box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.3); 
   border-radius: 3px;  */
@@ -58,7 +58,7 @@ select::-ms-expand {
 }
 
 select option {
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
 }
 
 select:focus::-ms-value {
@@ -73,20 +73,31 @@ select:focus::-ms-value {
   content: "\25BC";
   font-size: 20px;
   position: absolute;
-  right: 15px;
-  top: 8px;
-  color: rgb(0, 0, 0);
+  right: 2vw;
+  top: 2vh;
+  color: rgb(255, 255, 255);
 }
 
 input[type=submit] {
-  background-color: rgb(218, 218, 218);
+  background-color: rgb(40, 105, 255);
   border: none;
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px;
+  font-size: calc(15px + 3vmin);
   cursor: pointer;
 }
 
+.settings {
+  text-align: center;
+  font-size: calc(15px + 5vmin);
+  font-weight: bold;
+  margin: 3vh;
+}
+
+.form {
+  text-align: center;
+  font-size: calc(10px + 3vmin);
+}
