--- a/src/components/SideDrawer/Drawer.css
+++ b/src/components/SideDrawer/Drawer.css
@@ -2,8 +2,9 @@
   cursor: pointer;
   width: 15vw;
   height: 15vw;
-  background-color: rgb(40, 105, 255);
+  background-color: rgb(60, 120, 177);
   border-radius: 50%;
+  outline : 0;
 }
 
 .button-lines {
@@ -36,6 +37,7 @@
 }
 
 .navigator-open {
+  z-index: 200;
   position: fixed;
   top: 70vh;
   right: 75%;
