--- a/src/components/SideDrawer/SideDrawer.css
+++ b/src/components/SideDrawer/SideDrawer.css
@@ -1,3 +1,4 @@
+
 .side-drawer{
   height: 100%;
   background:white;
@@ -9,6 +10,7 @@
   z-index: 200;
   transform: translateX(100%);
   transition: ease-in 0.25s;
+  background-color: rgb(13, 178, 219);
 }
 
 .side-drawer.open{
@@ -36,11 +38,10 @@ select {
   -webkit-appearance: none;
   appearance: none;
   border: none;
-
   width: 100%;
   height: 7vh;
   padding-left: 10px;
-  background-color: rgb(40, 105, 255);;
+  background-color: rgb(60, 120, 177);
   color: rgb(255, 255, 255);
   font-family: "Open Sans", sans-serif;
   font-size: calc(10px + 2.5vmin);
@@ -79,7 +80,7 @@ select:focus::-ms-value {
 }
 
 input[type=submit] {
-  background-color: rgb(40, 105, 255);
+  background-color: rgb(60, 120, 177);
   border: none;
   color: rgb(255, 255, 255);
   padding: 15px 32px;
@@ -91,6 +92,7 @@ input[type=submit] {
 }
 
 .settings {
+  height: 9vh;
   text-align: center;
   font-size: calc(15px + 5vmin);
   font-weight: bold;
