--- a/src/components/StundenplanView/Kurs/Kurs.css
+++ b/src/components/StundenplanView/Kurs/Kurs.css
@@ -1,21 +1,21 @@
 .eintrag {
   text-align: center;
-  border: 1px solid grey;
+  border: 1px solid rgb(60, 120, 177); 
   box-sizing: border-box;
   width: 100%;
-  min-height: 20vh;
+  min-height: 25vh;
   background-color: rgb(13, 178, 219);
-  overflow: auto;
+  overflow: none;
   position: relative;
 
 }
 
 .eintrag-aktiv {
   text-align: center;
-  border: 1px solid grey;
+  overflow: none;
   box-sizing: border-box;
   width: 100%;
-  min-height: 20vh;
+  min-height: 25vh;
   overflow: auto;
   position: relative;
   background-color: skyblue; 
@@ -36,10 +36,9 @@
 
 .left {
   position: absolute;
-  border-right: 1px solid black;
+  border-right: 2px solid rgb(60, 120, 177);
   width: 15%;
   min-height: 100%;
-
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -50,7 +49,6 @@
   left: 15%;
   width: 85%;
   min-height: 100%;
-
   display: flex;
   justify-content: center;
   flex-direction: column;
