--- a/src/components/SideDrawer/SideDrawer.css
+++ b/src/components/SideDrawer/SideDrawer.css
@@ -1,11 +1,10 @@
-
-.side-drawer{
+.side-drawer {
   height: 100%;
-  background:white;
-  box-shadow: 1px 0px 7px rgba(0,0,0,0.5);
+  background: white;
+  box-shadow: 1px 0px 7px rgba(0, 0, 0, 0.5);
   position: fixed;
-  top : 0;
-  right : 0;
+  top: 0;
+  right: 0;
   width: 75%;
   z-index: 200;
   transform: translateX(100%);
@@ -13,25 +12,23 @@
   background-color: rgb(13, 178, 219);
 }
 
-.side-drawer.open{
+.side-drawer.open {
   transform: translateX(0);
   transition: ease-out 0.4s;
 }
 
-.side-drawer ul{
+.side-drawer ul {
   list-style: none;
   display: flex;
   flex-direction: column;
 }
 
-
-@media (min-width: 768px){
-  .side-drawer{
-    width : 50%;
+@media (min-width: 768px) {
+  .side-drawer {
+    width: 50%;
     transform: translateX(0);
   }
 }
-
 
 select {
   -moz-appearance: none;
@@ -44,13 +41,8 @@ select {
   background-color: rgb(60, 120, 177);
   color: rgb(255, 255, 255);
   font-family: "Open Sans", sans-serif;
-  font-size: calc(10px + 2.5vmin);
-
-  /*   box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.3); 
-  border-radius: 3px;  */
-
+  font-size: calc(10px + 1.5vmin);
   outline: none;
-
   cursor: pointer;
 }
 
@@ -68,6 +60,7 @@ select:focus::-ms-value {
 
 .select-wrapper {
   position: relative;
+  padding-top: 1vh;
 }
 
 .select-wrapper::before {
@@ -75,11 +68,12 @@ select:focus::-ms-value {
   font-size: 20px;
   position: absolute;
   right: 2vw;
-  top: 2vh;
+  top: 3vh;
   color: rgb(255, 255, 255);
+  pointer-events: none;
 }
 
-input[type=submit] {
+input[type="submit"] {
   background-color: rgb(60, 120, 177);
   border: none;
   color: rgb(255, 255, 255);
